# origincar

./: README.md  启动命令.md
src/control/: README.md  package.xml  setup.py
src/control/control/: avoid.py  line.py  master.py  qr_follow.py  qr_log.py
src/control/launch/: control.launch.py
src/detect/: CMakeLists.txt  README.md  package.xml
src/detect/config/: classes.list  config.json
src/detect/include/detect/: image_utils.h  parser.h
src/detect/launch/: aurora.launch.py  detect.launch.py
src/detect/src/: image_utils.cpp  node.cpp  parser.cpp
src/display/: package.xml  setup.py
src/display/display/: node.py
src/origincar/origincar_base/launch/: origincar_bringup.launch.py
src/origincar/origincar_base/src/: origincar_base.cpp
src/origincar/origincar_bringup/: package.xml
src/origincar/origincar_bringup/launch/: usb_websocket_display.launch.py
src/qr/: CMakeLists.txt  README.md  package.xml
src/qr/src/: qr_node.cpp
src/vlm/: package.xml  setup.py
src/vlm/vlm/: node.py
