<?xml version="1.0"?>
<package format="3">
  <name>detect</name>
  <version>1.0.0</version>
  <description>Monocular and Aurora YOLO detection</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>hbm_img_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>dnn_node</depend>
  <depend>hobot_cv</depend>

  <exec_depend>hobot_codec</exec_depend>
  <exec_depend>websocket</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
